[package]
name = "dart_js_lib_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.7.6"
alloc_counter = { version = "0.0.4", optional = true }
anyhow = "1.0.45"
ariadne = "0.1.3"
flexi_logger = { version = "0.19.6", default_features = false, features = ["async", "colors"] }
flutter_rust_bridge = "1.6.0"
lasso = { version = "0.6.0", features = ["multi-threaded"] }
lazy_static = "1.4.0"
log = "0.4.14"
swc_common = { version = "0.14.6", features = ["tty-emitter"] }
swc_ecma_ast = "0.58.0"
swc_ecma_parser = "0.78.2"
