[package]
name = "dart_js_lib_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dart_js_lib_gen"

[dependencies]
alloc_counter = { version = "0.0.4", optional = true }
anyhow = "1.0.45"
ariadne = "0.1.3"
flexi_logger = { version = "0.19.6", default_features = false, features = ["colors"] }
lazy_static = "1.4.0"
log = "0.4.14"
swc_common = { version = "0.14.6", features = ["tty-emitter", "concurrent"] }
swc_ecma_ast = "0.58.0"
swc_ecma_parser = "0.78.2"
clap = "2.33.3"
tempfile = "3.2.0"
scoped_threadpool = "0.1.9"
lasso = "0.6.0"
num_cpus = "1.13.0"
dart_js_lib_gen_atoms = { path = "pkg/dart_js_lib_gen_atoms" }
